--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.0.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
