--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-image-gallery": "^1.0.7",
     "react-infinite-scroller": "^1.2.4",
     "react-live": "^2.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-top": "^0.2.4",
     "react-spinners": "^0.8.1"
