--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "react-icons": "^3.10.0",
     "react-image-gallery": "^1.0.7",
     "react-infinite-scroller": "^1.2.4",
+    "react-lazyload": "^3.0.0",
     "react-live": "^2.2.2",
+    "react-loader-spinner": "^3.1.14",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-top": "^0.2.4",
-    "react-spinners": "^0.8.3"
+    "react-spinners": "^0.8.3",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
